--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -24,6 +24,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+
+    <!-- Adding razorpay script -->
+    <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
+
     <title>React App</title>
   </head>
   <body>
